--- a/src/app/candidate-details/candidate-details.component.html
+++ b/src/app/candidate-details/candidate-details.component.html
@@ -8,7 +8,11 @@
         <h2>WELCOME</h2>
         <p class="lead">Please register to continue.</p>
     </div>
-    <div class="row border border-5 border-primary rounded p-5 mx-4 bg-light">
+    <div class="row border border-5 border-primary rounded p-5 mx-4 mb-3 bg-light">
+      <div class="col-md-4 order-md-2 mb-4">
+        <img src="../../assets/img/pngwing.com.png"  class="img-fluid align-self-center">
+      </div>
+      <div class="col-md-8 order-md-1">
         <form>
             <div class="row row-space">
                 <div class="col-md-6 mb-3">
@@ -27,20 +31,111 @@
                   </div>
             </div>
             <div class="mb-3">
-                <label for="email">Email <span class="text-muted">(Optional)</span></label>
+                <label for="email">Email </label>
                 <input type="email" class="form-control" id="email" placeholder="you@example.com">
                 <div class="invalid-feedback">
                   Please enter a valid email address for shipping updates.
                 </div>
             </div>
-            <div class="mb-3">
+            <div class="row row-space">
+              <div class="col-md-6 mb-3">
                 <label for="phnumber">Phone Number</label>
-                <input type="number" class="form-control" id="phnumber" placeholder="you@example.com">
-                <input type="number" class="form-control" id="phnumber" placeholder="you@example.com">
+                <input type="number" class="form-control" id="phnumber">
+                
                 <div class="invalid-feedback">
                   Please enter a valid email address for shipping updates.
                 </div>
+              </div>
+              <div class="col-md-6 ">
+                <label for="zip">DOB</label>
+              <input type="date" class="form-control" id="zip" placeholder="" required="">
+              <div class="invalid-feedback">
+                Zip code required.
+              </div>
+              </div>
             </div>
+            <div class="mb-3">
+              <label for="email">Address</label>
+              <input type="email" class="form-control" id="email" placeholder="1234 Main St">
+              <div class="invalid-feedback">
+                Please enter a valid email address for shipping updates.
+              </div>
+          </div>
+          <div class="row">
+            <div class="col-md-5 mb-3">
+              <label for="country">Country</label>
+              <select class="custom-select d-block w-100" id="country" required="">
+                <option value="">Choose...</option>
+                <option>United States</option>
+              </select>
+              <div class="invalid-feedback">
+                Please select a valid country.
+              </div>
+            </div>
+            <div class="col-md-4 mb-3">
+              <label for="state">State</label>
+              <select class="custom-select d-block w-100" id="state" required="">
+                <option value="">Choose...</option>
+                <option>California</option>
+              </select>
+              <div class="invalid-feedback">
+                Please provide a valid state.
+              </div>
+            </div>
+            <div class="col-md-3 mb-3">
+              <label for="zip">Zip</label>
+              <input type="text" class="form-control" id="zip" placeholder="" required="">
+              <div class="invalid-feedback">
+                Zip code required.
+              </div>
+            </div>
+          </div>
+          <div class="row row-space">
+            <div class="col-md-8 mb-3">
+              <label for="phnumber">Higest Qualification</label>
+              <input type="text" class="form-control" id="phnumber">
+              
+              <div class="invalid-feedback">
+                Please enter a valid email address for shipping updates.
+              </div>
+            </div>
+            <div class="col-md-4 ">
+              <label for="gender">Gender</label>
+              <div class=" d-block px-4 row">
+                <div class="custom-control custom-radio col-md-4">
+                  <input id="credit" name="paymentMethod" type="radio" class="custom-control-input" checked="" required="">
+                  <label class="custom-control-label" for="credit">Male</label>
+                </div>
+                <div class="custom-control custom-radio col-md-4">
+                  <input id="debit" name="paymentMethod" type="radio" class="custom-control-input" required="">
+                  <label class="custom-control-label" for="debit">Female</label>
+                </div>
+                <div class="custom-control custom-radio col-md-4">
+                  <input id="paypal" name="paymentMethod" type="radio" class="custom-control-input" required="">
+                  <label class="custom-control-label" for="paypal">Other</label>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row row-space">
+            <div class="col-md-7 mb-3">
+                <label for="firstName">Present Designation</label>
+                <input type="text" class="form-control" id="firstName" placeholder="" value="" required="">
+                <div class="invalid-feedback">
+                  Valid first name is required.
+                </div>
+              </div>
+              <div class="col-md-5 mb-3">
+                <label for="firstName">Experience <span class="text-muted">(In Month)</span></label>
+                <input type="number" class="form-control" id="lastName" placeholder="" value="" required="">
+                <div class="invalid-feedback">
+                  Valid last name is required.
+                </div>
+              </div>
+        </div>
         </form>
+      </div>
+      
     </div>
+    <button class="btn btn-primary btn-lg btn-block" type="submit">Continue to checkout</button>
 </div>
