--- a/src/app/candidate-details/candidate-details.component.html
+++ b/src/app/candidate-details/candidate-details.component.html
@@ -8,11 +8,11 @@
         <h2>WELCOME</h2>
         <p class="lead">Please register to continue.</p>
     </div>
-    <div class="row border border-5 border-primary rounded p-5 mx-4 mb-3 bg-light">
-      <div class="col-md-4 order-md-2 mb-4">
+    <div class=" border border-5 border-primary rounded p-5 mx-4 mb-3 bg-light">
+      <!-- <div class="col-md-4 order-md-2 mb-4">
         <img src="../../assets/img/pngwing.com.png"  class="img-fluid align-self-center">
-      </div>
-      <div class="col-md-8 order-md-1">
+      </div> -->
+      <div class=" ">
         <form>
             <div class="row row-space">
                 <div class="col-md-6 mb-3">
@@ -134,8 +134,10 @@
               </div>
         </div>
         </form>
+        <button class="btn btn-primary btn-lg btn-block" type="submit" routerLink="/Rules">Submit</button>
       </div>
-      
+
+     
+
     </div>
-    <button class="btn btn-primary btn-lg btn-block" type="submit">Continue to checkout</button>
 </div>
