--- a/src/app/exam-dashboard/exam-dashboard.component.html
+++ b/src/app/exam-dashboard/exam-dashboard.component.html
@@ -1,1 +1,41 @@
-<p>exam-dashboard works!</p>
+<div class="row header">
+    <div class="col-2">time:</div>
+    <div class="col-8">Exam name</div>
+    <div class="col-2">submit</div>
+</div>
+<div class="row main-container" >
+    <div class="row col-9 qa-container">
+        <div class="col-12">
+            <div class="inner-header">
+                <p>Question : <span>2</span></p>
+            </div>
+        </div>
+        <div class="col-6">
+            <div class="inner-header">
+                <p>Question : <span>2</span></p>
+            </div>
+            <div class="inner-cont">
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+            </div>
+        </div>
+        <div class="col-6">
+            <div class="inner-header">
+                <p>Options</p>
+            </div>
+            <div class="inner-cont">
+                <p><span>1</span> Lorem Ipsum </p>
+            </div>
+            <div class="inner-cont">
+                <p><span>2</span> Lorem Ipsum </p>
+            </div>
+            <div class="inner-cont">
+                <p><span>3</span> Lorem Ipsum </p>
+            </div>
+            <div class="inner-cont">
+                <p><span>4</span> Lorem Ipsum </p>
+            </div>
+        </div>
+    </div>
+    <div class="col-3 side-container">Exam name</div>
+
+</div>
