--- a/src/app/exam-rules/exam-rules.component.html
+++ b/src/app/exam-rules/exam-rules.component.html
@@ -1,1 +1,30 @@
-<p>exam-rules works!</p>
+<div class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <div class="container">
+        <a class="navbar-brand" href="#">Rules</a>
+    </div>
+</div>
+<div class="container">
+    <div class="py-5 text-center">
+        <h2>Exam Instructions</h2>
+        <!-- <p class="lead">Please register to continue.</p> -->
+    </div>
+    <div class=" border border-5 border-primary rounded p-5 mx-4 mb-3 bg-light">
+      <!-- <div class="col-md-4 order-md-2 mb-4">
+        <img src="../../assets/img/pngwing.com.png"  class="img-fluid align-self-center">
+      </div> -->
+      <div class=" ">
+        <p class="lead">&#9673; The student may not use his or her textbook, course notes, or receive help from a proctor or any other outside source.</p>
+        <p class="lead">&#9673; Students must complete the 50-question multiple-choice exam within the 75-minute time frame allotted for the exam.</p>
+        <p class="lead">&#9673; Students must not stop the session and then return to it. This is especially important in the online environment where the system will "time-out" and not allow the student or you to reenter the exam site.</p>
+        <p class="lead">&#9673; If your online exam is interrupted, click the “Back” button on your web browser to see if you can return to the exam. If not, follow the instructions below to resume taking the exam. Note: Answers are saved by the system in 10-minute intervals. If you have to log back in to complete your exam, your prior answers will be remain from the last system-save.</p>
+        <p class="lead">&#9673; Reconnect to the Internet and log back into Brightspace.</p>
+        <p class="lead">&#9673; Follow your original instructions to access the exam login page.</p>
+        <p class="lead">&#9673; Ask your proctor to re-enter the Username and Password, then select the checkbox "Show list of unfinished exams, only select to re-enter an exam already in progress." This will enable you to resume taking the exam, close to the point before the interruption occurred.</p>
+        <p class="lead">&#9673; Have your Proctor enter the Username and Password provided in the email from The College and click enter.</p>
+        <button class="btn btn-primary btn-lg btn-block" type="submit" routerLink="/Exam">Start Exam</button>
+      </div>
+
+     
+
+    </div>
+</div>
