--- a/src/app/exam-dashboard/exam-dashboard.component.html
+++ b/src/app/exam-dashboard/exam-dashboard.component.html
@@ -1,16 +1,22 @@
 <div class="row header">
     <div class="col-2">time:</div>
     <div class="col-8">Exam name</div>
-    <div class="col-2">submit</div>
+    <div class="col-2" >submit</div>
 </div>
 <div class="row main-container" >
     <div class="row col-9 qa-container">
-        <div class="col-12">
-            <div class="inner-header">
-                <p>Question : <span>2</span></p>
-            </div>
+        <!-- <div class="row col-12">
+           <div>
+               <button type="button" class="btn btn-primary">topic 1</button>
+           </div>
+           <div>
+            <button type="button" class="btn btn-primary">topic 1</button>
         </div>
-        <div class="col-6">
+        <div>
+            <button type="button" class="btn btn-primary">topic 1</button>
+        </div>
+        </div> -->
+        <div class="col-6 qadiv">
             <div class="inner-header">
                 <p>Question : <span>2</span></p>
             </div>
@@ -18,7 +24,7 @@
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
             </div>
         </div>
-        <div class="col-6">
+        <div class="col-6 qadiv">
             <div class="inner-header">
                 <p>Options</p>
             </div>
@@ -35,7 +41,113 @@
                 <p><span>4</span> Lorem Ipsum </p>
             </div>
         </div>
-    </div>
-    <div class="col-3 side-container">Exam name</div>
+        <div class="col-12">
+           
+                <button type="button" class="btn btn-primary violet">Mark for review</button>
+            
+                <button type="button" class="btn btn-primary red">Clear response</button>
+           
 
+           
+                <button type="button" class="btn btn-primary yellow">Bookmark</button>
+            
+                <button type="button" class="btn btn-primary savebtn">SAVE</button>
+            
+        </div>
+    </div>
+    <div class="col-3 side-container">
+        <div class="row">
+            <div class="col-2">
+                <button class="qnumber red">1</button>
+            </div>
+            <div class="col-2">
+                <button class="qnumber red">2</button>
+            </div>
+            <div class="col-2">
+                <button class="qnumber green">3</button>
+            </div>
+            <div class="col-2">
+                <button class="qnumber green">4</button>
+            </div>
+            <div class="col-2">
+                <button class="qnumber green">5</button>
+            </div>
+            <div class="col-2">
+                <button class="qnumber green">6</button>
+            </div>
+            <div class="col-2">
+                <button class="qnumber red">7</button>
+            </div>
+            <div class="col-2">
+                <button class="qnumber green">8</button>
+            </div>
+            <div class="col-2">
+                <button class="qnumber green">9</button>
+            </div>
+            <div class="col-2">
+                <button class="qnumber">10</button>
+            </div>
+            <div class="col-2">
+                <button class="qnumber">11</button>
+            </div>
+            <div class="col-2">
+                <button class="qnumber">12</button>
+            </div>
+            <div class="col-2">
+                <button class="qnumber">13</button>
+            </div>
+            <div class="col-2">
+                <button class="qnumber green">14</button>
+            </div>
+            <div class="col-2">
+                <button class="qnumber green">15</button>
+            </div>
+            <div class="col-2">
+                <button class="qnumber">16</button>
+            </div>
+            <div class="col-2">
+                <button class="qnumber green">17</button>
+            </div>
+            <div class="col-2">
+                <button class="qnumber green">18</button>
+            </div>
+            <div class="col-2">
+                <button class="qnumber violet">19</button>
+            </div>
+            <div class="col-2">
+                <button class="qnumber violet">20</button>
+            </div>
+            <div class="col-2">
+                <button class="qnumber green">21</button>
+            </div>
+            <div class="col-2">
+                <button class="qnumber green">22</button>
+            </div>
+            <div class="col-2">
+                <button class="qnumber green">23</button>
+            </div>
+            <div class="col-2">
+                <button class="qnumber violet">24</button>
+            </div>
+            <div class="col-2">
+                <button class="qnumber">25</button>
+            </div>
+            <div class="col-2">
+                <button class="qnumber">26</button>
+            </div>
+            <div class="col-2">
+                <button class="qnumber green">27</button>
+            </div>
+            <div class="col-2">
+                <button class="qnumber green">28</button>
+            </div>
+            <div class="col-2">
+                <button class="qnumber green">29</button>
+            </div>
+            <div class="col-2">
+                <button class="qnumber green">30</button>
+            </div>
+        </div>
+    </div>
+    
 </div>
